syntax = "proto3";

option go_package = "github.com/utmstack/UTMStack/agent-manager/agent";

package agent;

service ModuleConfigService {
  rpc IsModuleEnabled(ModuleEnabledRequest) returns (ModuleEnabled) {}
}

message ModuleEnabled {
  bool enabled = 1;
}

message ModuleEnabledRequest {
  string module = 1;
}

